Fixed invalid avatar alignment in testimonials list

--- a/view/frontend/web/css/testimonials.less
+++ b/view/frontend/web/css/testimonials.less
@@ -180,6 +180,7 @@
         }
 
         img {
+            display: inline-block;
             max-width: 100%;
             vertical-align: middle;
             height: 90px;
